--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -4,7 +4,7 @@
   padding-top: rem(110);
 
   &__wrapper {
-    background: url("../../images/hero/hero_bg-main.jpg") center/cover no-repeat;
+    background: url("../images/hero/hero_bg-main.jpg") center/cover no-repeat;
     width: 100vw;
     height: auto;
     aspect-ratio: 2;
