--- a/styles/blocks/_style-card.scss
+++ b/styles/blocks/_style-card.scss
@@ -21,11 +21,13 @@
     }
 
     @include mobile {
-      width: rem(342);
+      width:100%;
+      height: 100%;
     }
   }
 
   &__unopened {
+    position: relative;
     cursor: pointer;
     border-radius: rem(15);
     padding: rem(20);
@@ -46,11 +48,26 @@
       height: rem(125);
       width: rem(665);
       row-gap: rem(20);
+      overflow: hidden;
     }
 
     @include mobile {
-      width: rem(342);
+      width: 100%;
       opacity: 1;
+    }
+
+    & svg {
+      position: relative;
+      top: rem(90);
+
+      @include laptop {
+        position: absolute;
+        top: 0;
+        right: 0;
+        min-height: 100%;
+        z-index: 1000;
+
+      }
     }
   }
 
@@ -249,7 +266,7 @@
     border: none;
 
     @include mobile {
-      width: rem(312);
+      width: 100%;
     }
   }
 
