completed (bug fix 2)

--- a/styles/blocks/_stylistics.scss
+++ b/styles/blocks/_stylistics.scss
@@ -29,7 +29,7 @@
   }
 
   &__banner {
-    background: url("../../images/stylistics/bg.jpg") center/cover no-repeat;
+    background: url("../images/stylistics/bg.jpg") center/cover no-repeat;
     min-width: 100%;
     min-height: 100%;
     padding: rem(45);
