--- a/styles/blocks/_materials.scss
+++ b/styles/blocks/_materials.scss
@@ -7,6 +7,11 @@
   align-items: center;
   padding-top: rem(200);
 
+  &--alt {
+    background: url("../images/materials/bg.png") center/cover no-repeat;
+    padding-bottom: rem(200);
+  }
+
   @include tablet {
     grid-template-columns: 1fr;
   }
