--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,3 +26,6 @@
 @use 'blocks/footer';
 @use 'blocks/stylistics';
 @use 'blocks/style-card';
+@use 'blocks/video-card';
+@use 'blocks/video-player';
+@use 'blocks/technologies';
